// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostPreview Component renders as expected with required props 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 0,
    }
  }
>
  <Styled(Left)
    style={
      Object {
        "flexDirection": "column",
        "width": 30,
      }
    }
  />
  <Styled(Body)
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <Styled(ViewNB)
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            },
            Object {
              "color": "#4BBC89",
            },
          ]
        }
      >
        - No Hashtags -
      </Styled(Text)>
      <Styled(Right)
        style={
          Array [
            Object {
              "justifyContent": "flex-end",
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Styled(Icon)
          name="md-time"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          just now
        </Styled(Text)>
        <Styled(Icon)
          name="chat"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
          type="Entypo"
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          0
        </Styled(Text)>
        <Styled(Icon)
          name="ios-flame"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              false,
            ]
          }
        />
        <Styled(Text)
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "paddingRight": 15,
              },
              false,
            ]
          }
        />
      </Styled(Right)>
    </Styled(ViewNB)>
    <Styled(Text)
      numberOfLines={1}
      style={
        Object {
          "fontSize": 15,
          "paddingBottom": 5,
        }
      }
    />
    <Styled(Text)
      note={true}
      numberOfLines={1}
      style={
        Object {
          "color": "lightgrey",
        }
      }
    >
      - No Subtitle -
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Testing PostPreview Component renders as expected with required props and hashtags 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 0,
    }
  }
>
  <Styled(Left)
    style={
      Object {
        "flexDirection": "column",
        "width": 30,
      }
    }
  />
  <Styled(Body)
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <Styled(ViewNB)
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            },
            Object {
              "color": "#4BBC89",
            },
          ]
        }
      >
        - No Hashtags -
      </Styled(Text)>
      <Styled(Right)
        style={
          Array [
            Object {
              "justifyContent": "flex-end",
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Styled(Icon)
          name="md-time"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          just now
        </Styled(Text)>
        <Styled(Icon)
          name="chat"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
          type="Entypo"
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          0
        </Styled(Text)>
        <Styled(Icon)
          name="ios-flame"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              false,
            ]
          }
        />
        <Styled(Text)
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "paddingRight": 15,
              },
              false,
            ]
          }
        />
      </Styled(Right)>
    </Styled(ViewNB)>
    <Styled(Text)
      numberOfLines={1}
      style={
        Object {
          "fontSize": 15,
          "paddingBottom": 5,
        }
      }
    />
    <Styled(Text)
      note={true}
      numberOfLines={1}
      style={
        Object {
          "color": "lightgrey",
        }
      }
    >
      - No Subtitle -
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Testing PostPreview Component renders as expected with required props and solved 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 0,
    }
  }
>
  <Styled(Left)
    style={
      Object {
        "flexDirection": "column",
        "width": 30,
      }
    }
  >
    <Styled(Icon)
      name="checkbox-marked-circle-outline"
      style={
        Array [
          Object {
            "fontSize": 15,
            "paddingBottom": 5,
            "paddingLeft": 5,
          },
          Object {
            "color": "#E5CB26",
          },
        ]
      }
      type="MaterialCommunityIcons"
    />
  </Styled(Left)>
  <Styled(Body)
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <Styled(ViewNB)
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            },
            Object {
              "color": "#4BBC89",
            },
          ]
        }
      >
        - No Hashtags -
      </Styled(Text)>
      <Styled(Right)
        style={
          Array [
            Object {
              "justifyContent": "flex-end",
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Styled(Icon)
          name="md-time"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          just now
        </Styled(Text)>
        <Styled(Icon)
          name="chat"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
          type="Entypo"
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          0
        </Styled(Text)>
        <Styled(Icon)
          name="ios-flame"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              false,
            ]
          }
        />
        <Styled(Text)
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "paddingRight": 15,
              },
              false,
            ]
          }
        />
      </Styled(Right)>
    </Styled(ViewNB)>
    <Styled(Text)
      numberOfLines={1}
      style={
        Object {
          "fontSize": 15,
          "paddingBottom": 5,
        }
      }
    />
    <Styled(Text)
      note={true}
      numberOfLines={1}
      style={
        Object {
          "color": "lightgrey",
        }
      }
    >
      - No Subtitle -
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Testing PostPreview Component renders as expected with required props and subtitle 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 0,
    }
  }
>
  <Styled(Left)
    style={
      Object {
        "flexDirection": "column",
        "width": 30,
      }
    }
  />
  <Styled(Body)
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <Styled(ViewNB)
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            },
            Object {
              "color": "#4BBC89",
            },
          ]
        }
      >
        - No Hashtags -
      </Styled(Text)>
      <Styled(Right)
        style={
          Array [
            Object {
              "justifyContent": "flex-end",
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Styled(Icon)
          name="md-time"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          just now
        </Styled(Text)>
        <Styled(Icon)
          name="chat"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
          type="Entypo"
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          0
        </Styled(Text)>
        <Styled(Icon)
          name="ios-flame"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              false,
            ]
          }
        />
        <Styled(Text)
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "paddingRight": 15,
              },
              false,
            ]
          }
        />
      </Styled(Right)>
    </Styled(ViewNB)>
    <Styled(Text)
      numberOfLines={1}
      style={
        Object {
          "fontSize": 15,
          "paddingBottom": 5,
        }
      }
    />
    <Styled(Text)
      note={true}
      numberOfLines={1}
      style={
        Object {
          "color": "lightgrey",
        }
      }
    >
      - No Subtitle -
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Testing PostPreview Component renders as expected with required props and temperature 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 0,
    }
  }
>
  <Styled(Left)
    style={
      Object {
        "flexDirection": "column",
        "width": 30,
      }
    }
  />
  <Styled(Body)
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <Styled(ViewNB)
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            },
            Object {
              "color": "#4BBC89",
            },
          ]
        }
      >
        - No Hashtags -
      </Styled(Text)>
      <Styled(Right)
        style={
          Array [
            Object {
              "justifyContent": "flex-end",
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Styled(Icon)
          name="md-time"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          just now
        </Styled(Text)>
        <Styled(Icon)
          name="chat"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
          type="Entypo"
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          0
        </Styled(Text)>
        <Styled(Icon)
          name="ios-flame"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              false,
            ]
          }
        />
        <Styled(Text)
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "paddingRight": 15,
              },
              false,
            ]
          }
        >
          0
        </Styled(Text)>
      </Styled(Right)>
    </Styled(ViewNB)>
    <Styled(Text)
      numberOfLines={1}
      style={
        Object {
          "fontSize": 15,
          "paddingBottom": 5,
        }
      }
    />
    <Styled(Text)
      note={true}
      numberOfLines={1}
      style={
        Object {
          "color": "lightgrey",
        }
      }
    >
      - No Subtitle -
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Testing PostPreview Component renders as expected with required props and viewed 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 0,
    }
  }
>
  <Styled(Left)
    style={
      Object {
        "flexDirection": "column",
        "width": 30,
      }
    }
  >
    <Styled(Icon)
      name="history"
      style={
        Array [
          Object {
            "fontSize": 15,
            "paddingBottom": 5,
            "paddingLeft": 5,
          },
          Object {
            "color": "lightgrey",
          },
        ]
      }
      type="MaterialCommunityIcons"
    />
  </Styled(Left)>
  <Styled(Body)
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <Styled(ViewNB)
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Styled(Text)
        style={
          Array [
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            },
            Object {
              "color": "#4BBC89",
            },
          ]
        }
      >
        - No Hashtags -
      </Styled(Text)>
      <Styled(Right)
        style={
          Array [
            Object {
              "justifyContent": "flex-end",
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Styled(Icon)
          name="md-time"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          just now
        </Styled(Text)>
        <Styled(Icon)
          name="chat"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "color": "#808080",
              },
            ]
          }
          type="Entypo"
        />
        <Styled(Text)
          note={true}
          style={
            Object {
              "fontSize": 10,
              "paddingBottom": 5,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          0
        </Styled(Text)>
        <Styled(Icon)
          name="ios-flame"
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              false,
            ]
          }
        />
        <Styled(Text)
          style={
            Array [
              Object {
                "fontSize": 10,
                "paddingBottom": 5,
                "paddingRight": 5,
                "paddingTop": 5,
              },
              Object {
                "paddingRight": 15,
              },
              false,
            ]
          }
        />
      </Styled(Right)>
    </Styled(ViewNB)>
    <Styled(Text)
      numberOfLines={1}
      style={
        Object {
          "fontSize": 15,
          "paddingBottom": 5,
        }
      }
    />
    <Styled(Text)
      note={true}
      numberOfLines={1}
      style={
        Object {
          "color": "lightgrey",
        }
      }
    >
      - No Subtitle -
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;
